--- a/CV.tex
+++ b/CV.tex
@@ -113,7 +113,7 @@
   \resumeSubHeadingListStart
   
     \resumeSubheading
-      {University of Pennsylvania}{Aug 2022 - May 2025}
+      {University of Pennsylvania}{Aug 2022 - May 2026}
       {Pursuing Bachelor of Science in Engineering majoring in Computer Science}{Current GPA: 3.55/4.0}
       
       \vspace{5pt}
@@ -132,15 +132,15 @@
             \resumeItem{Designed the platform using \textbf{React.js} for the frontend and \textbf{Express} for the backend, with \textbf{Firestore} as the database and \textbf{Firebase} authentication}
             \resumeItem{Hosted the platform on \textbf{GCP} using \textbf{Docker} and \textbf{Cloud Run}}
             \resumeItem{Implemented a comprehensive \textbf{Jest} and \textbf{Selenium} based test suite, significantly reducing production bugs}
-            \resumeItem{Conducted infurstructure load testing and verified the distributed architecture can handle \textbf{10,000 messages per second}}
+            \resumeItem{Conducted infrastructure load testing and verified the distributed architecture can handle \textbf{10,000 messages per second}}
             \resumeItem{Published an Excel-style formulas package \href{https://www.npmjs.com/package/@negotiate-gpt/formulas}{\underline{link}} and a number parsing package \href{https://www.npmjs.com/package/natural-number-parsing}{\underline{link}} on \textbf{npm}}
           \resumeItemListEnd
           {\textit{Reference available upon request}}{}
 
         \resumeProjectHeading
-          {\textbf{Software Developer Intern} $|$ \footnotesize\emph{CFO4ALL at Penn Venture Lab}}{Summer 2024}
+          {\textbf{Software Developer Intern} $|$ \footnotesize\emph{CFO4ALL at Penn Venture Lab}}{May 2024 - Aug 2024}
           \resumeItemListStart
-            \resumeItem{Developed a web application to provide CPG companies with cashflow forecasting and insights}
+            \resumeItem{Developed a web application to provide CPG companies with cash flow forecasting and insights}
             \resumeItem{Setup the AWS infrastructure and created backend on Amazon App Runner using \textbf{tRPC}}
             \resumeItem{Built a frontend using \textbf{React} and \textbf{TypeScript} to provide a user -friendly interface}
             \resumeItem{Created a \textbf{PostgreSQL} database on \textbf{Heroku} and designed a data model using \textbf{Prisma}}
@@ -182,8 +182,8 @@
         \resumeItemListStart
             \resumeItem{Created program that simulated the internal stresses of rigid lattices under arbitrary forces and collisions using \textbf{Newtonian mechanics}}
             \resumeItem{Estimated internal bond stresses using \textbf{gradient descent} to fit internal stresses to the lattice’s Newtonian motion}
-            \resumeItem{Optimized the bond estimation algorithm to run with fewer gradient descent iterations}
-            \resumeItem{Reimplemented the algorithm to run on a GPU, \textbf{improving performace over 10x}}
+            \resumeItem{Optimized the \textbf{bond estimation algorithm} to run with fewer gradient descent iterations}
+            \resumeItem{Reimplemented the algorithm to run on a GPU, \textbf{improving performance over 10x}}
         \resumeItemListEnd
 
         \resumeProjectHeading
@@ -193,6 +193,7 @@
         \resumeItemListStart
             \resumeItem{Developed a 2D physics environment in \textbf{Java} to train agents to navigate an obstacle course}
             \resumeItem{Implemented various ML techniques, predominantly using \textbf{Double Deep Q Learning}, to drive the agents}
+            \resumeItem{Implemented the neural network execution from scratch in Java for closer integration with the simulated environment}
             \resumeItem{Achieved success in training agents to execute precise jumps and navigate the environment effectively}
         \resumeItemListEnd
     \resumeSubHeadingListEnd
