--- a/CV.tex
+++ b/CV.tex
@@ -29,7 +29,9 @@
 \addtolength{\evensidemargin}{-0.5in}
 \addtolength{\textwidth}{1in}
 \addtolength{\topmargin}{-1in} % Default was -.5in
-\addtolength{\textheight}{1.0in}
+\addtolength{\textheight}{2in}
+
+
 
 \urlstyle{same}
 
@@ -113,8 +115,12 @@
   \resumeSubHeadingListStart
   
     \resumeSubheading
-      {University of Pennsylvania}{Aug 2022 - May 2026}
-      {Pursuing Bachelor of Science in Engineering majoring in Computer Science}{Current GPA: 3.55/4.0}
+      {University of Pennsylvania}{Aug 2022 - May 2025}
+      {Bachelor of Science And Engineering in Computer Science}{Current GPA: 3.57/4.0}
+    
+    %\resumeSubheading
+    %  {University of Pennsylvania}{Aug 2022 - May 2026}
+    %  {Jointly pursuing Bachelor of Science and Master of Science majoring in Computer Science}{Current GPA: 3.55/4.0}
       
       \vspace{5pt}
   \resumeSubHeadingListEnd
@@ -141,7 +147,8 @@
           {\textbf{Software Developer Intern} $|$ \footnotesize\emph{CFO4ALL at Penn Venture Lab}}{May 2024 - Aug 2024}
           \resumeItemListStart
             \resumeItem{Developed a web application to provide CPG companies with cash flow forecasting and insights}
-            \resumeItem{Setup the AWS infrastructure and created backend on Amazon App Runner using \textbf{tRPC}}
+            \resumeItem{Setup the \textbf{AWS} infrastructure using \textbf{Secrets Mangager}, \textbf{IAM}, \textbf{S3}, \textbf{ECR}}
+            \resumeItem{Setup \textbf{CI/CD} pipeline using \textbf{GitHub Actions} and \textbf{Docker} to deploy the application to \textbf{AWS App Runner} and \textbf{Amazon CloudFront}}
             \resumeItem{Built a frontend using \textbf{React} and \textbf{TypeScript} to provide a user -friendly interface}
             \resumeItem{Created a \textbf{PostgreSQL} database on \textbf{Heroku} and designed a data model using \textbf{Prisma}}
             \resumeItem{Collaborated in a team of three, ensuring robust and scalable application architecture}
@@ -151,7 +158,7 @@
           {\textbf{Teaching Assistant for Internet and Web Systems} (graduate level) $|$ \footnotesize\emph{University of Pennsylvania}}{2024 - Present}
           \resumeItemListStart
             \resumeItem{Through Office Hours and an online forum, I help students debug their code and understand the course material}
-            \resumeItem{Mentor two groups through the final project, building a distributed search engine}
+            \resumeItem{Mentor two groups through the final project, building a distributed search engine with \textbf{1,000,000} indexed pages}
           \resumeItemListEnd
 
     \resumeSubHeadingListEnd 
@@ -207,8 +214,9 @@
       
       \textbf{Software Tools}{: MATLAB, GCP, AWS, Firebase, Docker, Git, GDB, Selenium}\\
 
-      \textbf{Software Frameworks/Libraries}{: React, Node.js, Express.js, Pytorch, Tensorflow, pandas, NumPy, tRPC, Prisma}
+      \textbf{Software Frameworks/Libraries}{: React, Node.js, Express.js, Pytorch, Tensorflow, pandas, NumPy, tRPC, Prisma} \\
 
+      \textbf{General Skills}{: full-stack development, customer engagement, source control, CI/CD, product management, version control, linux, powershell, bash}
       }}
   \end{itemize}
           
