--- a/CV.tex
+++ b/CV.tex
@@ -147,7 +147,7 @@
           {\textbf{Software Developer Intern} $|$ \footnotesize\emph{CFO4ALL at Penn Venture Lab}}{May 2024 - Aug 2024}
           \resumeItemListStart
             \resumeItem{Developed a web application to provide CPG companies with cash flow forecasting and insights}
-            \resumeItem{Setup the \textbf{AWS} infrastructure using \textbf{Secrets Mangager}, \textbf{IAM}, \textbf{S3}, \textbf{ECR}}
+            \resumeItem{Setup the \textbf{AWS} infrastructure using \textbf{Secrets Manager}, \textbf{IAM}, \textbf{S3}, \textbf{ECR}}
             \resumeItem{Setup \textbf{CI/CD} pipeline using \textbf{GitHub Actions} and \textbf{Docker} to deploy the application to \textbf{AWS App Runner} and \textbf{Amazon CloudFront}}
             \resumeItem{Built a frontend using \textbf{React} and \textbf{TypeScript} to provide a user -friendly interface}
             \resumeItem{Created a \textbf{PostgreSQL} database on \textbf{Heroku} and designed a data model using \textbf{Prisma}}
