--- a/CV.tex
+++ b/CV.tex
@@ -117,22 +117,37 @@
     \resumeSubheading
       {University of Pennsylvania}{Aug 2022 - May 2025}
       {Bachelor of Science And Engineering in Computer Science}{Current GPA: 3.57/4.0}
-    
-    %\resumeSubheading
-    %  {University of Pennsylvania}{Aug 2022 - May 2026}
-    %  {Jointly pursuing Bachelor of Science and Master of Science majoring in Computer Science}{Current GPA: 3.55/4.0}
+      \vspace{3pt}
+
       
-      \vspace{5pt}
+      %\small{
+      %\textbf{Relevant Coursework:}
+      %  Linear Algebra and Optimization (Graduate), Computer Architecture, Operating Systems, Internet and Web Systems (Graduate), Design of Mechanical Systems (Graduate), 
+      %}
+      
   \resumeSubHeadingListEnd
 
+% -------------------- SKILLS --------------------
+  \section{Skills}
+  \begin{itemize}[leftmargin=0.15in, label={}]
+      \small{\item{
+      
+      \textbf{Languages}{: JavaScript/TypeScript, Java, Kotlin, Python, C/C++/C\#, Haskell, Ocaml, SQL, HTML, CSS} \\
+      
+      \textbf{Software Tools}{: MATLAB, GCP, AWS, Firebase, Docker, Git, GDB, Selenium}\\
 
+      \textbf{Software Frameworks/Libraries}{: React, Node.js, Express.js, Pytorch, Tensorflow, pandas, NumPy, tRPC, Prisma} \\
+
+      \textbf{General Skills}{: embedded-programming, full-stack development, system-level programming, customer engagement, source control, CI/CD, product management, version control, linux, powershell, bash, REST, HTTP}
+      }}
+  \end{itemize}
 
 % -------------------- EXPERIENCE --------------------
 \section{Work Experience}
   \resumeSubHeadingListStart
 
         \resumeProjectHeading
-          {\textbf{Technical Lead on Bizzybots Platform} $|$ \footnotesize\emph{Wharton Behavioral Lab}}{2022 - Present}
+          {\textbf{Software Engineering Lead on Bizzybots Platform} $|$ \footnotesize\emph{Wharton Behavioral Lab}}{2022 - Present}
           \resumeItemListStart
             \resumeItem{\textbf{Led a team of five} to develop a web platform for creating custom controllable chatbots, used by over 500 students and professors across 5 universities}
             \resumeItem{Designed the platform using \textbf{React.js} for the frontend and \textbf{Express} for the backend, with \textbf{Firestore} as the database and \textbf{Firebase} authentication}
@@ -205,19 +220,6 @@
         \resumeItemListEnd
     \resumeSubHeadingListEnd
 
-  % -------------------- SKILLS --------------------
-  \section{Skills}
-  \begin{itemize}[leftmargin=0.15in, label={}]
-      \small{\item{
-      
-      \textbf{Languages}{: JavaScript/TypeScript, Java, Kotlin, Python, C/C++/C\# } \\
-      
-      \textbf{Software Tools}{: MATLAB, GCP, AWS, Firebase, Docker, Git, GDB, Selenium}\\
-
-      \textbf{Software Frameworks/Libraries}{: React, Node.js, Express.js, Pytorch, Tensorflow, pandas, NumPy, tRPC, Prisma} \\
-
-      \textbf{General Skills}{: full-stack development, customer engagement, source control, CI/CD, product management, version control, linux, powershell, bash}
-      }}
-  \end{itemize}
+  
           
 \end{document}
