--- a/CV.tex
+++ b/CV.tex
@@ -151,29 +151,31 @@
           \resumeItemListStart
             \resumeItem{\textbf{Led a team of five} to develop a web platform for creating custom controllable chatbots, used by over 500 students and professors across 5 universities}
             \resumeItem{Designed the platform using \textbf{React.js} for the frontend and \textbf{Express} for the backend, with \textbf{Firestore} as the database and \textbf{Firebase} authentication}
-            \resumeItem{Hosted the platform on \textbf{GCP} using \textbf{Docker} and \textbf{Cloud Run}}
-            \resumeItem{Implemented a comprehensive \textbf{Jest} and \textbf{Selenium} based test suite, significantly reducing production bugs}
-            \resumeItem{Conducted infrastructure load testing and verified the distributed architecture can handle \textbf{10,000 messages per second}}
+            \resumeItem{Orchestrated deployment on \textbf{GCP}, using \textbf{Docker} and \textbf{Cloud Run}, ensuring \textbf{99.9\% uptime}}
+            \resumeItem{Designed a system of independent \textbf{co-existing chatbot versions}, allowing for rapid deployment of new features}
+            \resumeItem{Implemented a comprehensive \textbf{Jest} and \textbf{Selenium}-based test suite, reducing production bugs by 80\%}
+            \resumeItem{Conducted infrastructure load testing to verify the architecture can handle \textbf{10,000 messages per second}}
             \resumeItem{Published an Excel-style formulas package \href{https://www.npmjs.com/package/@negotiate-gpt/formulas}{\underline{link}} and a number parsing package \href{https://www.npmjs.com/package/natural-number-parsing}{\underline{link}} on \textbf{npm}}
           \resumeItemListEnd
           {\textit{Reference available upon request}}{}
 
         \resumeProjectHeading
-          {\textbf{Software Developer Intern} $|$ \footnotesize\emph{CFO4ALL at Penn Venture Lab}}{May 2024 - Aug 2024}
+          {\textbf{Software Developer Intern} $|$ \footnotesize\emph{CFO4ALL at Penn Venture Lab}}{May 2024 - Sep 2024}
           \resumeItemListStart
-            \resumeItem{Developed a web application to provide CPG companies with cash flow forecasting and insights}
-            \resumeItem{Setup the \textbf{AWS} infrastructure using \textbf{Secrets Manager}, \textbf{IAM}, \textbf{S3}, \textbf{ECR}}
-            \resumeItem{Setup \textbf{CI/CD} pipeline using \textbf{GitHub Actions} and \textbf{Docker} to deploy the application to \textbf{AWS App Runner} and \textbf{Amazon CloudFront}}
-            \resumeItem{Built a frontend using \textbf{React} and \textbf{TypeScript} to provide a user -friendly interface}
-            \resumeItem{Created a \textbf{PostgreSQL} database on \textbf{Heroku} and designed a data model using \textbf{Prisma}}
-            \resumeItem{Collaborated in a team of three, ensuring robust and scalable application architecture}
+            \resumeItem{Worked on a web application to provide CPG companies with cash flow forecasting and insights:}
+            \resumeItem{Set up \textbf{CI/CD} pipeline using \textbf{GitHub Actions} \& \textbf{Docker} to deploy to \textbf{AWS App Runner} \& \textbf{CloudFront};
+            reducing deployment time 90\% and allowing production credentials to be removed from developers' computers}
+            \resumeItem{Designed a scalable time series-tree data structure for financial data; integrated this data structure with backend analysis and frontend visualizations;
+            \textbf{speeding up queries by 70\%}}
+            \resumeItem{Implemented a data ingest pipeline from Quickbooks to a \textbf{PostgreSQL} database on \textbf{Heroku} for customers with \textbf{250,000+ data points};
+            \textbf{automating the customer onboarding process}}
           \resumeItemListEnd
 
         \resumeProjectHeading
           {\textbf{Teaching Assistant for Internet and Web Systems} (graduate level) $|$ \footnotesize\emph{University of Pennsylvania}}{2024 - Present}
           \resumeItemListStart
             \resumeItem{Through Office Hours and an online forum, I help students debug their code and understand the course material}
-            \resumeItem{Mentor two groups through the final project, building a distributed search engine with \textbf{1,000,000} indexed pages}
+            \resumeItem{Mentor two groups through the final project, a distributed search engine with \textbf{1,000,000} indexed pages}
           \resumeItemListEnd
 
     \resumeSubHeadingListEnd 
