website link and icons

--- a/CV.tex
+++ b/CV.tex
@@ -100,18 +100,20 @@
     \textbf{\Huge \scshape Cyrus Singer} \\ \vspace{8pt}
     \small 
     \faIcon{github}
-    \href{https://github.com/brianbob12}{\underline{github.com/brianbob12}} $  $
+    \href{https://github.com/brianbob12}{\underline{github.com}} $  $
     \faIcon{linkedin}
-    \href{https://www.linkedin.com/in/cyrus-singer-35b4a5221}{\underline{linkedin.com/in/cyrus-singer-35b4a5221}} $  $
+    \href{https://www.linkedin.com/in/cyrus-singer-35b4a5221}{\underline{linkedin}} $  $
+    \faIcon{connectdevelop}
+    \href{https://cyrus.singer.dev}{\underline{cyrus.singer.dev}} $ $
     \faIcon{envelope}
-    \href{mailto:japaneserhino@gmail.com}
-    {\underline{japaneserhino@gmail.com}}
+    \href{mailto:cysinger@seas.upenn.edu}
+    {\underline{cysinger@seas.upenn.edu}}
     \faIcon{phone}
     \href{tel:561-403-8133}{\underline{(561) 403-8133}}
 \end{center}
 
 % -------------------- EDUCATION --------------------
-\section{Education}
+\section{\faIcon{graduation-cap} Education}
   \resumeSubHeadingListStart
   
     \resumeSubheading
@@ -128,7 +130,7 @@
   \resumeSubHeadingListEnd
 
 % -------------------- SKILLS --------------------
-  \section{Skills}
+  \section{\faIcon{code} Skills}
   \begin{itemize}[leftmargin=0.15in, label={}]
       \small{\item{
       
@@ -143,7 +145,7 @@
   \end{itemize}
 
 % -------------------- EXPERIENCE --------------------
-\section{Work Experience}
+\section{\faIcon{briefcase} Work Experience}
   \resumeSubHeadingListStart
 
         \resumeProjectHeading
@@ -182,7 +184,7 @@
 
 
 
-\section{Personal Projects}
+\section{\faIcon{laptop} Personal Projects}
     \resumeSubHeadingListStart
     
       \resumeProjectHeading
