--- a/CV.tex
+++ b/CV.tex
@@ -102,9 +102,9 @@
     \faIcon{github}
     \href{https://github.com/brianbob12}{\underline{github.com}} $  $
     \faIcon{linkedin}
-    \href{https://www.linkedin.com/in/cyrus-singer-35b4a5221}{\underline{linkedin}} $  $
+    \href{https://www.linkedin.com/in/cyrus-singer}{\underline{linkedin}} $  $
     \faIcon{connectdevelop}
-    \href{https://cyrus.singer.dev}{\underline{cyrus.singer.dev}} $ $
+    \href{https://cyrus.singer.dev}{\textbf{\underline{cyrus.singer.dev}}} $ $
     \faIcon{envelope}
     \href{mailto:cysinger@seas.upenn.edu}
     {\underline{cysinger@seas.upenn.edu}}
@@ -117,7 +117,7 @@
   \resumeSubHeadingListStart
   
     \resumeSubheading
-      {University of Pennsylvania}{Aug 2022 - May 2025}
+      {University of Pennsylvania}{May 2025}
       {Bachelor of Science And Engineering in Computer Science}{Current GPA: 3.57/4.0}
       \vspace{3pt}
 
@@ -151,22 +151,27 @@
         \resumeProjectHeading
           {\textbf{Software Engineering Lead on Bizzybots Platform} $|$ \footnotesize\emph{Wharton Behavioral Lab}}{2022 - Present}
           \resumeItemListStart
-            \resumeItem{\textbf{Led a team of five} to develop a web platform for creating custom controllable chatbots, used by over 500 students and professors across 5 universities}
-            \resumeItem{Designed the platform using \textbf{React.js} for the frontend and \textbf{Express} for the backend, with \textbf{Firestore} as the database and \textbf{Firebase} authentication}
-            \resumeItem{Orchestrated deployment on \textbf{GCP}, using \textbf{Docker} and \textbf{Cloud Run}, ensuring \textbf{99.9\% uptime}}
-            \resumeItem{Designed a system of independent \textbf{co-existing chatbot versions}, allowing for rapid deployment of new features}
-            \resumeItem{Implemented a comprehensive \textbf{Jest} and \textbf{Selenium}-based test suite, reducing production bugs by 80\%}
-            \resumeItem{Conducted infrastructure load testing to verify the architecture can handle \textbf{10,000 messages per second}}
-            \resumeItem{Published an Excel-style formulas package \href{https://www.npmjs.com/package/@negotiate-gpt/formulas}{\underline{link}} and a number parsing package \href{https://www.npmjs.com/package/natural-number-parsing}{\underline{link}} on \textbf{npm}}
+            \resumeItem{Lead technical, architectural design and development of a web platform for creating custom, highly reliable
+            chatbots used by over 500 students and professors across 5 universities for education and research
+            \scriptsize{(cited by papers under review)}}
+            \resumeItem{Oversee a team of five developers, enforcing coding, version control, logging best practices}
+            \resumeItem{Design the platform using \textbf{OpenAI} LLMs for response generation and bot control, \textbf{React.js} for the
+            frontend and \textbf{Express} for the backend, with \textbf{Firestore} as the database and \textbf{Firebase} user management 
+            and authentication}
+            \resumeItem{Orchestrate deployment on \textbf{GCP}, using \textbf{Docker} and \textbf{Cloud Run}, ensuring \textbf{99.9\% uptime}}
+            \resumeItem{Design a system of independent \textbf{co-existing software versions}, allowing for rapid deployment of new features}
+            \resumeItem{Implement a comprehensive \textbf{Jest} and \textbf{Selenium}-based test suite, \textbf{reducing production bugs by 80\%}}
+            \resumeItem{Conduct infrastructure load testing to verify the architecture can handle \textbf{10,000 messages per second}}
+            \resumeItem{Publish and maintain an Excel-style formulas package \href{https://www.npmjs.com/package/@negotiate-gpt/formulas}{\underline{link}} and a number parsing package \href{https://www.npmjs.com/package/natural-number-parsing}{\underline{link}} on \textbf{npm}}
           \resumeItemListEnd
-          {\textit{Reference available upon request}}{}
+          {\textit{Reference and demo available upon request}}{}
 
         \resumeProjectHeading
           {\textbf{Software Developer Intern} $|$ \footnotesize\emph{CFO4ALL at Penn Venture Lab}}{May 2024 - Sep 2024}
           \resumeItemListStart
             \resumeItem{Worked on a web application to provide CPG companies with cash flow forecasting and insights:}
             \resumeItem{Set up \textbf{CI/CD} pipeline using \textbf{GitHub Actions} \& \textbf{Docker} to deploy to \textbf{AWS App Runner} \& \textbf{CloudFront};
-            reducing deployment time 90\% and allowing production credentials to be removed from developers' computers}
+            reducing deployment time by 90\% and allowing production credentials to be removed from developers' computers}
             \resumeItem{Designed a scalable time series-tree data structure for financial data; integrated this data structure with backend analysis and frontend visualizations;
             \textbf{speeding up queries by 70\%}}
             \resumeItem{Implemented a data ingest pipeline from Quickbooks to a \textbf{PostgreSQL} database on \textbf{Heroku} for customers with \textbf{250,000+ data points};
@@ -174,10 +179,13 @@
           \resumeItemListEnd
 
         \resumeProjectHeading
-          {\textbf{Teaching Assistant for Internet and Web Systems} (graduate level) $|$ \footnotesize\emph{University of Pennsylvania}}{2024 - Present}
+          {\textbf{Teaching Assistant for Internet and Web Systems} $|$ \footnotesize\emph{University of Pennsylvania}}{Jan 2024 - Present}
           \resumeItemListStart
-            \resumeItem{Through Office Hours and an online forum, I help students debug their code and understand the course material}
-            \resumeItem{Mentor two groups through the final project, a distributed search engine with \textbf{1,000,000} indexed pages}
+            \vspace{5pt}
+            \scriptsize{(MS/PhD Required Class)}
+            \vspace{-2pt}
+            \resumeItem{Guide students to debug code and understand course material through weekly office hours and an online forum}
+            \resumeItem{Mentor groups through the final project, a distributed search engine with \textbf{1,000,000} indexed pages}
           \resumeItemListEnd
 
     \resumeSubHeadingListEnd 
@@ -190,7 +198,7 @@
       \resumeProjectHeading
         {\textbf{Webapp to play chess with an LLM} $|$ \footnotesize\emph{TypeScript, Next.js, LLMs, Minimax, }
         $|$ \href{https://github.com/brianbob12/chess-with-llm}{
-          \underline{source code}}}
+          \underline{GitHub}}}
         {2024}
           
         \resumeItemListStart
@@ -199,29 +207,41 @@
           \resumeItem{Included logging and tuning capabilities, allowing for easy monitoring and adjustment of the algorithm's parameters}
         \resumeItemListEnd
 
+      \resumeProjectHeading
+        {\textbf{AI Writing React At Runtime} $|$ \footnotesize\emph{TypeScript, React, esbuild, express.js } $|$
+          \href{https://github.com/brianbob12/RuntimeUI}{
+          \underline{GitHub}}}
+          {2024}
+          
+        \resumeItemListStart
+            \resumeItem{Developed an innovative solution enabling AI to generate and integrate a React component into a live site \textbf{without a page refresh}}
+            \resumeItem{Evaluated different AI models on different platforms to balance generation quality and latency}
+            \resumeItem{Constructed a TypeScript to CommonJS pipeline to reduce runtime failures of AI components by 90\%}
+        \resumeItemListEnd
+
         \resumeProjectHeading
         {\textbf{Brittle Object Simulation} $|$ \footnotesize\emph{Python, GPU optimization, Physics Simulation} $|$
           \href{https://github.com/brianbob12/Shatter2}{
-          \underline{source code}},
-          }{2022}
+          \underline{GitHub}}}
+          {2022}
           
         \resumeItemListStart
-            \resumeItem{Created program that simulated the internal stresses of rigid lattices under arbitrary forces and collisions using \textbf{Newtonian mechanics}}
+            \resumeItem{Created a program that simulated the internal stresses of rigid lattices under arbitrary forces and collisions using \textbf{Newtonian mechanics}}
             \resumeItem{Estimated internal bond stresses using \textbf{gradient descent} to fit internal stresses to the lattice’s Newtonian motion}
             \resumeItem{Optimized the \textbf{bond estimation algorithm} to run with fewer gradient descent iterations}
             \resumeItem{Reimplemented the algorithm to run on a GPU, \textbf{improving performance over 10x}}
         \resumeItemListEnd
 
-        \resumeProjectHeading
-        {\textbf{RL Experiment} $|$ \footnotesize\emph{Java, Python, Tensorflow, Deep Q Learning} $|$ \href{https://github.com/brianbob12/Robot_Gym}{
-          \underline{source code}}}
-          {2020}
-        \resumeItemListStart
-            \resumeItem{Developed a 2D physics environment in \textbf{Java} to train agents to navigate an obstacle course}
-            \resumeItem{Implemented various ML techniques, predominantly using \textbf{Double Deep Q Learning}, to drive the agents}
-            \resumeItem{Implemented the neural network execution from scratch in Java for closer integration with the simulated environment}
-            \resumeItem{Achieved success in training agents to execute precise jumps and navigate the environment effectively}
-        \resumeItemListEnd
+        % \resumeProjectHeading
+        % {\textbf{RL Experiment} $|$ \footnotesize\emph{Java, Python, Tensorflow, Deep Q Learning} $|$ \href{https://github.com/brianbob12/Robot_Gym}{
+        %   \underline{source code}}}
+        %   {2020}
+        % \resumeItemListStart
+        %     \resumeItem{Developed a 2D physics environment in \textbf{Java} to train agents to navigate an obstacle course}
+        %     \resumeItem{Implemented various ML techniques, predominantly using \textbf{Double Deep Q Learning}, to drive the agents}
+        %     \resumeItem{Implemented the neural network execution from scratch in Java for closer integration with the simulated environment}
+        %     \resumeItem{Achieved success in training agents to execute precise jumps and navigate the environment effectively}
+        % \resumeItemListEnd
     \resumeSubHeadingListEnd
 
   
