quick tenseing fix

--- a/CV.tex
+++ b/CV.tex
@@ -162,7 +162,7 @@
             \resumeItem{Design a system of independent \textbf{co-existing software versions}, allowing for rapid deployment of new features}
             \resumeItem{Implement a comprehensive \textbf{Jest} and \textbf{Selenium}-based test suite, \textbf{reducing production bugs by 80\%}}
             \resumeItem{Conduct infrastructure load testing to verify the architecture can handle \textbf{10,000 messages per second}}
-            \resumeItem{Publish and maintain an Excel-style formulas package \href{https://www.npmjs.com/package/@negotiate-gpt/formulas}{\underline{link}} and a number parsing package \href{https://www.npmjs.com/package/natural-number-parsing}{\underline{link}} on \textbf{npm}}
+            \resumeItem{Published and maintain an Excel-style formulas package \href{https://www.npmjs.com/package/@negotiate-gpt/formulas}{\underline{link}} and a number parsing package \href{https://www.npmjs.com/package/natural-number-parsing}{\underline{link}} on \textbf{npm}}
           \resumeItemListEnd
           {\textit{Reference and demo available upon request}}{}
 
